Added a link to academic free licence on mollyproject.org homepage

--- a/branches/extracting_oxford/mollyproject.org/index.html
+++ b/branches/extracting_oxford/mollyproject.org/index.html
@@ -137,8 +137,8 @@
         <h2>Licensing and availability</h2>
 
         <p>
-          Molly is distributed under the terms of the <strong>Academic Free
-          License v3.0</strong> and actively encourages contributions from
+          Molly is distributed under the terms of the <strong><a href="http://www.opensource.org/licenses/academic.php">Academic Free
+          License v3.0</a></strong> and actively encourages contributions from
           any and all institutions.
         </p>
 
