Clarified what information comes from OpenStreetMap.

--- a/branches/extracting_oxford/mollyproject.org/index.html
+++ b/branches/extracting_oxford/mollyproject.org/index.html
@@ -182,7 +182,7 @@
           <dd><p>
             Display University buildings, restaurants, bus stops and whatever
             else is important to your staff and students. Molly comes with
-            support for importing information from
+            support for importing points of interest information from
             <strong>OpenStreetMap</strong> and <strong>the <abbr
             title="National Public Transport Access Node">NaPTAN</abbr>
             database</strong>, and can easily be extended to pull data from
