--- a/mollyproject.org/index.html
+++ b/mollyproject.org/index.html
@@ -57,6 +57,11 @@
               <em>Times Higher Education</em> article
             </a>
           </li>
+		  <li>
+			<a href="http://www.universitybusiness.com/viewarticle.aspx?articleid=1515">
+				<em>University Business</em> article
+			</a>
+		  </li>
           <li>
             <a href="http://www.ox.ac.uk/media/news_stories/2009/091012.html">
               <em>University of Oxford</em> press release
