adding link to base.css

--- a/mollyproject.org/index.html
+++ b/mollyproject.org/index.html
@@ -15,6 +15,7 @@
 	
 	<link rel="stylesheet" href="blueprint/screen.css" type="text/css" media="screen, projection" />
 	<link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print" />	
+	<link rel="stylesheet" href="base.css" type="text/css" media="print" />
 	<!--[if lt IE 8]><link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 	
 	<!-- Date: 2010-05-11 -->
