Starting to factor mollyproject.org into more than one page.

--- a/mollyproject.org/why.html
+++ b/mollyproject.org/why.html
@@ -55,61 +55,36 @@
                 </ul><hr/>
 </div>
 
-            <div class="span-10 colborder">
-			<h2>About</h2>
-			<p>Molly is a framework for the rapid development of information and service portals targeted at mobile internet devices. The framework follows a “batteries included” philosophy, featuring a wide variety of applications and connectors to common and standards-based systems including the <a href="http://sakaiproject.org">Sakai Virtual Learning Environment</a>.</p>
-</div>
-<div class="span-8 last"><img src="screenshots/oxford.png"/></div>
-			<hr />
-			
-			<div class="append-bottom span-9 colborder">
-				<h2>Open Source Licence</h2>
-		        <p>
+			<h2>Choosing Molly</h2>	
+			<div class="span-9 append-1">
+			<dl>
+	          <dt>Open-source license</dt>
+	          <dd>		        <p>
 		          Molly is distributed under the terms of the <strong><a href="http://www.opensource.org/licenses/academic.php">Academic Free
 		          License v3.0</a></strong> and actively encourages contributions from
 		          any and all institutions.
 		        </p>
 		        <p>
-		          If you or your organisation would like to get involved or deploy
-		          a mobile site for the benefit of your members, we'd love
-		          to help. More information can be found <a href="/docs/topics/contributing.html">in
-		          our documentation</a>.
-		        </p>
-			</div>
-			<div class="append-bottom span-9 last">
-				<h2>Compatibility</h2>
-				<p>Molly is designed from the ground up for sustainability and compatibility, out of the box it supports <em>any</em> web-capable device and also provides RESTful interfaces for all its modules. Whatever technological changes happen in the Mobile computing field, Molly's design ensures that your deployment will have a long life. </p>
-			</div>
-			
-			<hr />
-			<h2>Features</h2>	
-			<div class="span-9 append-1">
-			<dl>
-	          <dt>Contact search</dt>
-	          <dd><p>
-	            Search your University's contact directory to retrieve e-mail
-	            addresses, phone numbers and locations. Molly comes with
-	            out-of-the-box support for <strong><abbr title="Lightweight
-	            Directory Access Protocol">LDAP</abbr> directories</strong>, and
-	            demonstrator providers for the University of Oxford's contact search.
-	          </p></dd>
+		          You have the freedom to use the code however you like, and aren't reliant upon an external provider to satisfy your use case.
+		        </p></dd>
 
-	          <dt>Library search</dt>
+	          <dt>Works with any phone</dt>
 	          <dd><p>
-	            Molly can interface with library information systems using the
-	            <strong>Z39.50 protocol</strong>, providing a simplified search to
-	            cover most use-cases for people on the move. We intend to support
-	            access to systems with other interfaces in the near future.
-	          </p></dd>
+	            Molly is a web-based application framework targetting all phones, 'smart' or otherwise. Native applications can only target a few
+                classes of device, leaving a large number of potential users unable to use the service.
+	          </p><p>
+                However, Molly also exposes all its information as <strong>XML</strong> and <strong>JSON</strong>, making it easy for native application
+                developers to build new clients.</p>
+</dd>
 
-	          <dt>Podcasts</dt>
+	          <dt>Standards compliant</dt>
 	          <dd><p>
 	            Provide access to your University's audio-visual media with our
 	            existing support for <strong><abbr title="Outline Processor Markup
 	            Language">OPML</abbr> feeds</strong>.
 	          </p></dd>
 
-	          <dt>Places and maps</dt>
+	          <dt>Freedom</dt>
 	          <dd><p>
 	            Display University buildings, restaurants, bus stops and whatever
 	            else is important to your staff and students. Molly comes with
@@ -120,7 +95,7 @@
 	            any local information sources.
 	          </p></dd>
 
-	          <dt>News and events</dt>
+	          <dt>Community</dt>
 	          <dd><p>
 	            Molly provides simple support for displaying news and events from
 	            RSS feeds, including maps of venues where available.
