Added alt tag for screenshot

--- a/mollyproject.org/index.html
+++ b/mollyproject.org/index.html
@@ -60,7 +60,7 @@
 			<p>Molly is a framework for the rapid development of information and service portals targeted at mobile internet devices. The framework follows a “batteries included” philosophy, featuring a wide variety of applications and connectors to common and standards-based systems including the <a href="http://sakaiproject.org">Sakai Virtual Learning Environment</a>.</p>
 </div>
 <div class="span-8 last">
-<img src="screenshots/oxford.png"/>
+<img src="screenshots/oxford.png" alt="Mobile Oxford home page"/>
 <p>Molly as <a href="http://m.ox.ac.uk/">implemented at the University of Oxford</a>.</p>
 
 </div>
