Mushed things around and added more content.

--- a/mollyproject.org/features.html
+++ b/mollyproject.org/features.html
@@ -6,7 +6,7 @@
 <head>
 	<title>Molly | The open source mobile portal</title>
 	
-	<meta name="description" content="Molly is a framework for the rapid development of information and service portals targetted at mobile internet devices."/>
+	<meta name="description" content="Molly is a framework for the rapid development of information and service portals targeted at mobile internet devices."/>
     <meta name="copyright" content="This site's design and contents Copyright (c) 2010 University of Oxford and contributors."/>
     <meta name="license" content="This site's design and contents may be reused under the terms of the Creative Commons Attribution 3.0 license (http://creativecommons.org/licenses/by/3.0/)"/>
     <meta name="keywords" content="Molly, Python, Django, university, mobile, framework, open-source, Academic Free License, Oxford"/>
@@ -48,7 +48,6 @@
                 <div class="append-bottom">
                 <ul class="navigation">
                     <li><a href=".">About Molly</a></li>
-                    <li><a href="why.html">Choosing Molly</a></li>
                     <li><a href="features.html">Features</a></li>
                     <li><a href="community.html">Community</a></li>
 
