--- a/mollyproject.org/index.html
+++ b/mollyproject.org/index.html
@@ -33,7 +33,7 @@
 			<li class="first"><a href="https://sourceforge.net/mail/?group_id=309230">Mailing Lists</a></li>
 			<li><a href="/docs/">Documentation</a></li>
 			<li><a href="irc://irc.freenode.net/#molly">IRC Channel</a></li>
-			<li><a href="https://github.com/mollyproject/mollyproject">Git Repository</a></li>
+			<li><a href="http://github.com/mollyproject/mollyproject">Git Repository</a></li>
 		</ul>
 		</div>
 	</div>
@@ -221,7 +221,7 @@
 		            <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=309230&amp;type=11" width="120" height="30" alt="Get Molly at SourceForge.net. Fast, secure and Free Open Source software downloads" />
 		          </a>
 		          <br/>
-		          <a href="https://github.com/mollyproject/mollyproject">
+		          <a href="http://github.com/mollyproject/mollyproject">
 		            <img src="/images/gitbutton.png" width="120" height="51" alt="Get Molly at Github" />
 		          </a>
 		        </p>
